@@ -442,6 +442,11 @@ HTTPAUTHServerVariable=Authorization
 # support this feature.
 AdditionalLoginFormActionURL=
 
+# Array of allowed hosts for redirects with full URL from eZ Publish modules.
+# Note: Current host and configured hosts (HostMatchMapItems/HostUriMatchMapItems) are always considered trusted
+AllowedRedirectHosts[]
+# AllowedRedirectHosts[]=www.sometrustedhost.com
+
 # Settings for the search engine framework in eZ Publish
 [SearchSettings]
 SearchEngine=eZSearchEngine
